# Guin-5

./: haskell-template.cabal  hie.yaml  justfile
src/Data_Storage/: Database_AccessControl.hs  Database_Authentication.hs  Database_Connection.hs  Database_Contact.hs  Database_Document.hs  Database_Newsfeed.hs  Database_User.hs  DocumentManagement.hs  Model.hs
src/Server_Code/: API.hs  Handlers.hs  Server.hs  Types.hs
tests/: NewsFeedSpec.hs  Spec.hs  TestDatabaseCode.hs  TestUtils.hs
