cabal-version:      2.4
name:               haskell-template
version:            0.1.0.0
license:            MIT
copyright:          2022 Steven Pinkerton
maintainer:         Steven Pinkerton
author:             Steven Pinkerton
category:           Web

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
synopsis:           A template for Haskell projects using Nix

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DuplicateRecordFields
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NoStarIsType
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  build-depends:
    , aeson
    , async
    , base          >=4   && <5
    , base64-bytestring
    , bcrypt
    , bytestring
    , conduit
    , conduit-extra
    , containers
    , cryptonite
    , data-default
    , directory
    , exceptions             >=0.10.5
    , filepath
    , http-conduit
    , http-types
    , jwt                    >=0.10.0
    , memory
    , monad-logger
    , mtl
    , optics-core
    , persistent
    , persistent-postgresql
    , profunctors
    , random
    , relude                 >=1.0
    , resource-pool
    , servant
    , servant-server
    , servant-multipart
    , servant-auth-server
    , shower
    , text
    , time
    , warp
    , with-utf8
    , yaml
    , wai
    , uuid
    , temporary
    , hspec-expectations

  other-modules:
    Data_Storage.Database_AccessControl
    Data_Storage.Database_Authentication
    Data_Storage.Database_Connection
    Data_Storage.Database_Contact
    Data_Storage.Database_Document
    Data_Storage.Database_Newsfeed
    Data_Storage.Database_User
    Data_Storage.DocumentManagement
    Data_Storage.Model

  hs-source-dirs:     src
  default-language:   Haskell2010

executable haskell-template
  import:  shared
  main-is: Main.hs
